[workspace]
members = [
    ".",
    "leo-bindings-core",
    "leo-bindings-macro",
    "leo-bindings-credits",
    "examples/dev/leo",
    "examples/dev",
    "examples/token/leo",
    "examples/token",
    "examples/external",
    "examples/delegated",
    "examples/delegated/leo"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
leo-bindings = { path = "." }
leo-bindings-core = { path = "leo-bindings-core" }
leo-bindings-macro = { path = "leo-bindings-macro" }
credits_bindings = { path = "leo-bindings-credits" }
snarkvm = { git = "https://github.com/ProvableHQ/snarkVM.git", tag = "v4.4.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
indexmap = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
aleo-std = { version = "1.0.1", features = ["storage"] }
convert_case = "0.6"
http = "1.0"
ureq = { version = "3", features = ["json"] }
rand = "0.8"
rand_chacha = "0.3.1"
clap = { version = "4.4", features = ["derive"] }
colored = "3.0.0"
num-format = "0.4.4"
itertools = "0.14.0"
walkdir = "2.5.0"
regex = "1.10"
log = "0.4"
leo-span = { git = "https://github.com/henrikkv/leo", package = "leo-span" }
leo-package = { git = "https://github.com/henrikkv/leo", package = "leo-package" }
leo-ast = { git = "https://github.com/henrikkv/leo", package = "leo-ast" }
leo-interpreter = { git = "https://github.com/henrikkv/leo", package = "leo-interpreter" }
leo-parser = { git = "https://github.com/henrikkv/leo", package = "leo-parser" }
leo-errors = { git = "https://github.com/henrikkv/leo", package = "leo-errors" }

[package]
name = "leo-bindings"
version.workspace = true
edition.workspace = true


[[bin]]
name = "get-signatures"
path = "src/bin/get-signatures.rs"

[[bin]]
name = "leo-bindings"
path = "src/bin/leo-bindings.rs"

[dependencies]
leo-bindings-core.workspace = true
leo-bindings-macro.workspace = true
serde_json.workspace = true
clap.workspace = true
snarkvm.workspace = true
anyhow.workspace = true
ureq.workspace = true
indexmap.workspace = true
leo-span.workspace = true
leo-package.workspace = true
leo-ast.workspace = true
leo-interpreter.workspace = true
leo-parser.workspace = true
leo-errors.workspace = true
aleo-std.workspace = true
http.workspace = true
rand.workspace = true
itertools.workspace = true
walkdir.workspace = true
colored.workspace = true
num-format.workspace = true
regex.workspace = true
rand_chacha.workspace = true
env_logger = "0.11"
