[workspace]
resolver = "3"
members = [
    ".",
    "leo-bindings-core",
    "leo-bindings-macro",
    "leo-bindings-credits",
    "leo-bindings-sdk",
    "examples/dev/leo",
    "examples/dev",
    "examples/token/leo",
    "examples/token",
    "examples/delegated",
    "examples/delegated/leo",
    "examples/dyn_example/leo/imports/dyn_plugin_add",
    "examples/dyn_example/leo/imports/dyn_plugin_mul",
    "examples/dyn_example/leo/imports/dyn_token_plugin",
    "examples/dyn_example/leo",
    "examples/dyn_example"
]

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.dependencies]
leo-bindings = { path = "." }
leo-bindings-core = { path = "leo-bindings-core" }
leo-bindings-macro = { path = "leo-bindings-macro" }
leo-bindings-sdk = { path = "leo-bindings-sdk" }
credits_bindings = { path = "leo-bindings-credits" }
snarkvm = { git = "https://github.com/henrikkv/snarkVM", branch = "leo-bindings", features = ["test_consensus_heights"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
indexmap = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
aleo-std = { version = "1.0.1", features = ["storage"] }
convert_case = "0.6"
http = "1.0"
ureq = { version = "3", features = ["json"] }
rand = "0.8"
rand_chacha = "0.3.1"
clap = { version = "4.4", features = ["derive"] }
colored = "3.0.0"
num-format = "0.4.4"
itertools = "0.14.0"
walkdir = "2.5.0"
regex = "1.10"
log = "0.4"
dotenvy = "0.15"
env_logger = "0.11"
leo-span = "4.0"
leo-package = "4.0"
leo-ast = "4.0"
leo-parser = "4.0"
leo-errors = "4.0"
leo-abi-types = "4.0"
reqwest = { version = "0.12", default-features = false }
reqwest-middleware = "0.3"
reqwest-retry = "0.6"
tokio = "1"
thiserror = "1.0"

[package]
name = "leo-bindings"
version.workspace = true
edition.workspace = true

[[bin]]
name = "leo-bindings"
path = "src/bin/leo-bindings.rs"

[dependencies]
leo-bindings-core.workspace = true
leo-bindings-macro.workspace = true
leo-bindings-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
snarkvm.workspace = true
anyhow.workspace = true
ureq.workspace = true
indexmap.workspace = true
leo-span.workspace = true
leo-package.workspace = true
leo-ast.workspace = true
leo-parser.workspace = true
leo-errors.workspace = true
aleo-std.workspace = true
http.workspace = true
rand.workspace = true
itertools.workspace = true
walkdir.workspace = true
colored.workspace = true
num-format.workspace = true
regex.workspace = true
rand_chacha.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
log.workspace = true
leo-abi-types.workspace = true
