[workspace]
resolver = "3"
members = [
    ".",
    "leo-bindings-cli",
    "leo-bindings-core",
    "leo-bindings-credits",
    "leo-bindings-sdk",
    "examples/dev/leo",
    "examples/dev",
    "examples/token/leo",
    "examples/token",
    "examples/delegated",
    "examples/delegated/leo",
    "examples/dyn_example/leo",
    "examples/dyn_example"
]

[workspace.package]
version = "0.2.1"
edition = "2024"

[profile.dev]
opt-level = 3
incremental = true

[profile.test]
opt-level = 3
incremental = true

[workspace.dependencies]
leo-bindings = { path = "." }
leo-bindings-cli = { path = "leo-bindings-cli" }
leo-bindings-core = { path = "leo-bindings-core" }
leo-bindings-sdk = { path = "leo-bindings-sdk" }
credits_bindings = { path = "leo-bindings-credits" }
snarkvm = { git = "https://github.com/henrikkv/snarkVM", branch = "leo-bindings", features = ["test_consensus_heights"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
indexmap = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
prettyplease = "0.2"
aleo-std = { version = "1.0.1", features = ["storage"] }
convert_case = "0.6"
pathdiff = "0.2"
http = "1.0"
ureq = { version = "3", features = ["json"] }
rand = "0.10"
rand_chacha = "0.10"
clap = { version = "4.4", features = ["derive"] }
colored = "3.0.0"
num-format = "0.4.4"
itertools = "0.14.0"
walkdir = "2.5.0"
regex = "1.10"
log = "0.4"
dotenvy = "0.15"
env_logger = "0.11"
leo-span = { git = "https://github.com/ProvableHQ/leo", package = "leo-span" }
leo-package = { git = "https://github.com/ProvableHQ/leo", package = "leo-package" }
leo-ast = { git = "https://github.com/ProvableHQ/leo", package = "leo-ast" }
leo-parser = { git = "https://github.com/ProvableHQ/leo", package = "leo-parser" }
leo-errors = { git = "https://github.com/ProvableHQ/leo", package = "leo-errors" }
leo-abi-types = { git = "https://github.com/ProvableHQ/leo", package = "leo-abi-types" }
reqwest = { version = "0.12", default-features = false }
reqwest-middleware = { version = "0.3", features = ["json"] }
reqwest-retry = "0.6"
tokio = "1"
thiserror = "1.0"

[package]
name = "leo-bindings"
version.workspace = true
edition.workspace = true

[dependencies]
leo-bindings-core.workspace = true
leo-bindings-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
snarkvm.workspace = true
anyhow.workspace = true
indexmap.workspace = true
http.workspace = true
rand.workspace = true
env_logger.workspace = true
log.workspace = true
