[package]
name = "leo-bindings-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
aleo-std = { workspace = true }
snarkvm = { workspace = true }
anyhow = { workspace = true }
convert_case = { workspace = true }
http = { workspace = true }
colored = { workspace = true }
num-format = { workspace = true }
leo-span = { workspace = true }
leo-package = { workspace = true }
leo-ast = { workspace = true }
leo-interpreter = { workspace = true }
leo-parser = { workspace = true }
leo-errors = { workspace = true }
itertools = { workspace = true }
