[package]
name = "leo-bindings-core"
version.workspace = true
edition.workspace = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }
aleo-std = { workspace = true }
snarkvm = { workspace = true }
anyhow = { workspace = true }
convert_case = { workspace = true }
http = { workspace = true }
colored = { workspace = true }
num-format = { workspace = true }
leo-abi-types = { workspace = true }
serde_json = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
dotenvy = { workspace = true }
indexmap = { workspace = true }
leo-package = { workspace = true }
leo-span = { workspace = true }
