[package]
name = "leo-bindings-credits"
version = "0.1.0"
edition = "2021"

[lib]
name = "leo_bindings_credits"
path = "lib.rs"

[dependencies]
leo-bindings = { path = "../" }
leo-bindings-core = { path = "../leo-bindings-core" }
leo-bindings-macro = { path = "../leo-bindings-macro" }
anyhow = "1.0"
indexmap = "2.0"
rand = "0.8"
ureq = { version = "2.6", features = ["json"] }
aleo-std = { version = "1.0.1", features = ["storage"] }
http = "1.0"
snarkvm = "4.1.0"
leo-lang = "3.1.0"
leo-package = "3.1.0"
leo-ast = "3.1.0"
leo-span = "3.1.0"
serde_json = "1.0"