[workspace]
members = ["."]

[workspace.dependencies]
leo-bindings = {path = "../"}
rand = "0.8"
snarkvm = "4.2.1"

# BEGIN IMPORTS

# END IMPORTS

[package]
name = "credits_bindings"
version = "0.1.0"
edition = "2024"

[lib]
name = "credits_bindings"
path = "lib.rs"

[dependencies]
leo-bindings.workspace = true
rand.workspace = true
snarkvm.workspace = true

[build-dependencies]
leo-bindings-core = {path = "../leo-bindings-core"}
serde_json = "1"
