[package]
name = "leo-bindings-macro"
version.workspace = true
edition.workspace = true

[features]
tracked = []

[lib]
proc-macro = true

[dependencies]
leo-bindings-core = { path = "../leo-bindings-core" }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
serde_json = { workspace = true }