[package]
name = "leo-bindings-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
snarkvm.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
leo-bindings.workspace = true
rand_chacha.workspace = true
dotenvy.workspace = true

[dev-dependencies]
tokio-test = "0.4"
anyhow.workspace = true
aleo-std.workspace = true
http.workspace = true
rand.workspace = true

