[package]
name = "leo-bindings-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
indexmap.workspace = true
snarkvm.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rand.workspace = true
rand_chacha.workspace = true
dotenvy.workspace = true
aleo-std.workspace = true
http.workspace = true
colored.workspace = true
num-format.workspace = true
log.workspace = true

[dev-dependencies]
anyhow.workspace = true
aleo-std.workspace = true
http.workspace = true
rand.workspace = true
