[package]
name = "dev"
version.workspace = true
edition.workspace = true

[lib]
name = "devtest"
path = "lib.rs"

[features]
default = ["mainnet", "testnet", "canary"]
mainnet = ["leo-bindings/mainnet"]
testnet = ["leo-bindings/testnet"]
canary = ["leo-bindings/canary"]

[dependencies]
leo-bindings = { path = "../../" }

[dev-dependencies]
snarkvm = { workspace = true }
