[package]
name = "dev"
version.workspace = true
edition.workspace = true

[lib]
name = "devtest"
path = "lib.rs"

[features]
default = ["testnet"]
mainnet = []
testnet = []
canary = []
interpreter = []

[dependencies]
leo-bindings = { path = "../../" }

[dev-dependencies]
snarkvm = { workspace = true }
