[package]
name = "dev"
version.workspace = true
edition.workspace = true

[lib]
name = "dev_bindings"
path = "lib.rs"

[features]
default = ["interpreter"]
mainnet = []
testnet = []
canary = []
interpreter = []

[dependencies]
leo-bindings = { path = "../../" }

[dev-dependencies]
snarkvm = { workspace = true }
