[package]
name = "token"
version.workspace = true
edition.workspace = true

[lib]
name = "tokenexample"
path = "lib.rs"

[features]
default = ["testnet"]
mainnet = []
testnet = []
canary = []
interpreter = []

[dependencies]
leo-bindings = { path = "../../" }
leo-bindings-credits = { path = "../../leo-bindings-credits/" }

[dev-dependencies]
snarkvm = { workspace = true }
rand = { workspace = true }
