[package]
name = "token"
version.workspace = true
edition.workspace = true

[lib]
name = "token_bindings"
path = "lib.rs"

[dependencies]
leo-bindings = { path = "../../" }
leo-bindings-credits = { path = "../../leo-bindings-credits/" }

[dev-dependencies]
snarkvm = { workspace = true }
rand = { workspace = true }
