[package]
name = "token-example"
version.workspace = true
edition.workspace = true

[dependencies]
token_bindings = { path = "leo" }
credits_bindings.workspace = true
leo-bindings.workspace = true

[dev-dependencies]
snarkvm.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
