
[package]
name = "dyn_example_bindings"
version.workspace = true
edition.workspace = true
[lib]
name = "dyn_example_bindings"
path = "lib.rs"

[dependencies]
leo-bindings.workspace = true
dyn_plugin_add_bindings = { path = "imports/dyn_plugin_add" }
dyn_plugin_mul_bindings = { path = "imports/dyn_plugin_mul" }
dyn_token_plugin_bindings = { path = "imports/dyn_token_plugin" }

# BEGIN IMPORTS
# credits_bindings = { git = "https://github.com/henrikkv/leo-bindings" }
# END IMPORTS
