
[package]
name = "dyn_example_bindings"
version.workspace = true
edition.workspace = true
[lib]
name = "dyn_example_bindings"
path = "lib.rs"

[dependencies]
leo-bindings.workspace = true
adder_bindings = { path = "imports/adder" }
multiplier_bindings = { path = "imports/multiplier" }

# BEGIN IMPORTS
# credits_bindings = { git = "https://github.com/henrikkv/leo-bindings" }
# END IMPORTS
