[workspace]
members = ["."]

[workspace.dependencies]
leo-bindings = { git = "https://github.com/henrikkv/leo-bindings" }
rand = "0.8"
snarkvm = "4.2.1"

# BEGIN IMPORTS

# END IMPORTS

[package]
name = "token_bindings"
version = "0.1.0"
edition = "2024"

[lib]
name = "token_bindings"
path = "lib.rs"

[dependencies]
leo-bindings.workspace = true
rand.workspace = true
snarkvm.workspace = true

[build-dependencies]
leo-bindings-core = { git = "https://github.com/henrikkv/leo-bindings" }
serde_json = "1"
